multiple-auth-methods/ingresses/simple-ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v1demo
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocol: "https"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /anything
        pathType: Exact                                
        backend: 
          service: 
            name: echo
            port:
              number: 80
